--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,6 @@ matrix:
       dist: bionic
 
 before_install:
-  - sudo apt-get install ninja-build -y
   - INSTALLER=cuda-repo-${UBUNTU_VERSION}_${CUDA}_amd64.deb
   - wget http://developer.download.nvidia.com/compute/cuda/repos/${UBUNTU_VERSION}/x86_64/${INSTALLER}
   - sudo dpkg -i ${INSTALLER}
@@ -46,6 +45,6 @@ before_install:
 before_script:
   - mkdir build
   - cd build
-  - cmake .. -GNinja
+  - cmake .. -G "Ninja"
 
 script: ninja
