--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,16 @@
 cmake_minimum_required(VERSION 3.12)
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
+set(CMAKE_INCLUDE_DIRECTORIES_PROJECT_BEFORE ON)
+set(CMAKE_COLOR_MAKEFILE ON)
 
-set(CMAKE_CUDA_COMPILER "/usr/local/cuda-11.2/bin/nvcc")
 set(CMAKE_CUDA_STANDARD 14)
 set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS}")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
 
 project(2D_TLM LANGUAGES CUDA CXX)
-
-
-add_executable(2D_TLM 2DTLM.cu)
+    find_package(CUDA REQUIRED)
+    set(USING_CUDA_LANG_SUPPORT False)
+    add_executable(2D_TLM 2DTLM.cu)
 
 set_target_properties(
         2D_TLM
